--- a/Final Report.Rmd
+++ b/Final Report.Rmd
@@ -12,11 +12,13 @@ output:
 
 ```{r}
 #install.packages("mltools")
+#install.packages("caret")
 library(mltools)
 library(data.table)
 ```
 
-**Loading dataset in R from the CSV file, and converting **
+
+**Loading dataset in R from the CSV file, and removing some columns which are not needed**
 ```{r}
 car_data = read.csv("Cars_data.csv")
 car_data = subset(car_data, select = -c(Vehicle.Style, Market.Category))
@@ -26,15 +28,29 @@ car_data = subset(car_data, select = -c(Vehicle.Style, Market.Category))
 #unique(car_data$Engine.Fuel.Type)
 #unique(car_data$Driven_Wheels)
 unique(car_data$Vehicle.Size)
+car_data$Make<-NULL
+car_data$Model<- NULL
 #head(car_data)
 
 ```
 
-**Removing the dew non automatic/manual transmission types, and storing this new data in car_data_transd dataframe**
+
+**Removing extreme prices less than $3000 and greater than $100,000**
 ```{r}
 
 
-car_data_transd<-car_data[!(car_data$Transmission.Type=="AUTOMATED_MANUAL" | car_data$Transmission.Type=="DIRECT_DRIVE" | car_data$Transmission.Type=="UNKNOWN"),]
+car_data_priced<-car_data[!(car_data$MSRP>100000 | car_data$MSRP<3000 ),]
+
+range(car_data_priced$MSRP)
+
+```
+
+
+**Removing the non automatic/manual transmission types, and storing this new data in car_data_transd dataframe**
+```{r}
+
+
+car_data_transd<-car_data_priced[!(car_data_priced$Transmission.Type=="AUTOMATED_MANUAL" | car_data_priced$Transmission.Type=="DIRECT_DRIVE" | car_data_priced$Transmission.Type=="UNKNOWN"),]
 
 unique(car_data_transd$Transmission.Type)
 
@@ -49,6 +65,13 @@ car_data_fuel<-car_data_transd[!(grepl("flex", car_data_transd$Engine.Fuel.Type,
 
 unique(car_data_fuel$Engine.Fuel.Type)
 ```
+
+
+```{r}
+range(car_data_fuel$MSRP)
+
+```
+
 
 **Assigning the different types of gasoline to a single "gasoline value". Now, the only two values for fuel type will be "gasoline" and "diesel" as visible below**
 
@@ -80,6 +103,8 @@ levels(car_data_factored$Driven_Wheels)
 
 car_data_factored = one_hot(as.data.table(car_data_factored))
 
+car_data_factored$ReleasedYearsAgo <- with(car_data_factored, 2020 - Year)
+
 ```
 
 
@@ -87,12 +112,82 @@ car_data_factored = one_hot(as.data.table(car_data_factored))
 **Added a variable to dataset (ReleasedYearsAgo) which stores the value of the years ago this model was released**
 
 ```{r}
-car_data_factored$ReleasedYearsAgo <- with(car_data_factored, 2020 - Year)
+
+car_data$Year <- NULL
+car_data_factored$Year <- NULL
+car_data_factored$Engine.Fuel.Type_diesel <- NULL
+car_data_factored$Transmission.Type_MANUAL <- NULL
+car_data_factored$Vehicle.Size_Midsize   <- NULL
+car_data_factored$`Driven_Wheels_rear wheel drive` <- NULL
+```
+
+
+**Modeling**
+
+```{r}
+#install.packages("dplyr")
+#install.packages("ggplots2")
+#install.packages("caret")
+library(dplyr)
+library(ggplot2)
+library(caret)
+set.seed(100)
+#train-test  split using 65% of the data
+samplesize = round(0.65*nrow(car_data_factored), 0)
+index = sample(seq_len(nrow(car_data_factored)), size = samplesize)
+data_train = car_data_factored[index,]
+data_test = car_data_factored[-index,]
+msrp_mod = lm(MSRP ~., data_train)
+#summary(msrp_mod)
+msrp_mod2 = lm(MSRP ~ highway.MPG + Popularity, data_test)
+summary(msrp_mod2)
+#anova(msrp_mod2, msrp_mod)
+```
+
+
+**Assumptions**
+
+```{r}
+alias(msrp_mod)
+```
+
+
+```{r}
+#linearity
+resact = data.frame(residual = msrp_mod$residuals, fitted = msrp_mod$fitted.values)
+resact %>% ggplot(aes(fitted, residual)) + geom_point() + geom_smooth() + geom_hline(aes(yintercept = 0)) + 
+    theme(panel.grid = element_blank(), panel.background = element_blank())
+#normality test
+shapiro.test(msrp_mod$residuals[0:5000])
+
+library(car)
+#multicollinearity
+vif = vif(msrp_mod)
+max(vif)
+```
+
+
+**Making model improvements**
+
+```{r}
+head(car_data_factored)
+
+car_model = lm (MSRP ~ ., data = car_data_factored)
+aic_back = step(car_model, direction = "back")
+
+```
+
+```{r}
+summary(aic_back)
+
 ```
 
 
 
 ```{r}
-head(car_data_factored)
+plot( MSRP~Engine.HP, data = car_data_factored)
+
+hist( car_data_factored$MSRP, scientific = FALSE)
+
 ```
 
