--- a/Final Report.Rmd
+++ b/Final Report.Rmd
@@ -39,16 +39,15 @@ car_data = read.csv("Cars_data.csv")
 car_data = subset(car_data, select = -c(Vehicle.Style, Market.Category))
 car_data = na.omit(car_data)
 
-#unique(car_data$Transmission.Type)
+unique(car_data$Make)
 #colnames(car_data)
 #unique(car_data$Engine.Fuel.Type)
 #unique(car_data$Driven_Wheels)
-unique(car_data$Vehicle.Size)
-#car_data$Make<-NULL
+#unique(car_data$Vehicle.Size)
 car_data$Model<- NULL
-car_data_info = car_data
+#car_data_info = car_data
 #head(car_data)
-colnames(car_data_info)
+colnames(car_data)
 
 ```
 
@@ -93,12 +92,13 @@ hist( car_data$MSRP, scien = FALSE, col = "lightblue")
 ```
 
 
-**Removing extreme prices less than $10,000 and greater than $100,000**
+**Removing extreme prices less than $8,500 and greater than $50,000**
 
-We decided to do this since there were certain extreme outliers as visible in the graph above. 
+We decided to do this since there were certain extreme outliers as visible in the graph above. Reasons are further explained below.
+
 ```{r}
 
-car_data_priced<-car_data[!(car_data$MSRP>100000 | car_data$MSRP< 10000 ),]
+car_data_priced<-car_data[!(car_data$MSRP>50000 | car_data$MSRP< 8500 ),]
 range(car_data_priced$MSRP)
 
 ```
@@ -107,10 +107,10 @@ range(car_data_priced$MSRP)
 Once this is done, the MSRP Histogram looks like:
 
 ```{r}
-hist( car_data_priced$MSRP, scientific = FALSE, col = "lightpink")
+hist( car_data_priced$MSRP, col = "lightpink", breaks = 40)
 ```
 
-This is a reasonable distribution for our response variable. Additionally, price is a much more important factor in the mass market than in the expensive/luxury segment so it is reasonable to restrict the price at $100,000. In fact, it may even be brought down further. -  https://smallbusiness.chron.com/price-sensitivity-product-65805.html
+This is a reasonable distribution for our response variable. Additionally, price is a much more important factor in the mass market than in the expensive/luxury segment so it is reasonable to restrict the price at $50,000. In fact, it may even be brought down further. -  https://smallbusiness.chron.com/price-sensitivity-product-65805.html
 
 
 
@@ -155,19 +155,37 @@ unique(car_data_fuel$Engine.Fuel.Type)
 ```
 
 
+**Removing extremely rare brands in our dataset (those which occur less than 20 times)**
+
+```{r}
+big_brands = names(which(table(car_data_fuel$Make)>20))
+
+small_removed = filter(car_data_fuel, Make %in% big_brands)
+
+
+```
+
+
+
 
 #### Making categorical variables factors, and adding age variable
 
-**The age variable is essentially how many years ago the model was released. It is the "Year" in the dataset subtracted from the current year**
+**The ReleasedYearsAgo added variable is essentially how many years ago the model was released. It is the "Year" in the dataset subtracted from the current year**
+
 ```{r}
-car_data_factored = car_data_fuel
+car_data_factored = small_removed
+
+#car_data_factored <- car_data_fuel[!(as.numeric(car_data_fuel$Make) %in% which(table(car_data_fuel$Make)<100)),]
 car_data_factored$Vehicle.Size <- factor(car_data_factored$Vehicle.Size)
 car_data_factored$Transmission.Type <- factor(car_data_factored$Transmission.Type)
 car_data_factored$Engine.Fuel.Type <- factor(car_data_factored$Engine.Fuel.Type)
 car_data_factored$Driven_Wheels <- factor(car_data_factored$Driven_Wheels)
 car_data_factored$Engine.Cylinders <- factor(car_data_factored$Engine.Cylinders)
 car_data_factored$Number.of.Doors <- factor(car_data_factored$Number.of.Doors)
-car_data_factored$Make <- factor(car_data_factored$Make)
+car_data_factored$Make <- factor(car_data_factored$Make, exclude = FALSE)
+
+
+
 
 levels(car_data_factored$Vehicle.Size)
 levels(car_data_factored$Transmission.Type)
@@ -177,8 +195,6 @@ levels(car_data_factored$Engine.Cylinders)
 levels(car_data_factored$Number.of.Doors)
 levels(car_data_factored$Make)
 
-
-#car_data_factored = one_hot(as.data.table(car_data_factored))
 
 car_data_factored$ReleasedYearsAgo <- with(car_data_factored, 2020 - Year)
 
@@ -191,32 +207,38 @@ car_data_factored$Year <- NULL
 ```
 
 
-## Modeling
+## Modelling
 
 
-**Simple additive models:**
+**Splitting data into train and test: **
+
 ```{r}
 set.seed(100)
+
 #train-test  split using 65% of the data
 samplesize = round(0.65*nrow(car_data_factored), 0)
 index = sample(seq_len(nrow(car_data_factored)), size = samplesize)
+
 data_train = car_data_factored[index,]
 data_test = car_data_factored[-index,]
-msrp_mod_additive = lm(MSRP ~. , data_train)
-summary(msrp_mod_additive)$r.sq
-msrp_mod2 = lm(MSRP ~ highway.MPG + Popularity, data_test)
-#summary(msrp_mod2)
-#anova(msrp_mod2, msrp_mod)
 ```
+
+
+**Creating a basic additive model:**
+```{r}
+msrp_mod_additive = lm(MSRP ~. , data_train)
+summary(msrp_mod_additive)$adj.r.sq
+```
+
+**We get a fairly high value for Adjusted R-squared, which is encouraging. We now consider some other models as well**
+
+
+**Defining a function to calculate the calc_loocv_rmse **
 ```{r}
 calc_loocv_rmse = function(model) {
   sqrt(mean((resid(model) / (1 - hatvalues(model))) ^ 2))
 }
 ```
-
-
-
-**We get a fairly high value for Adjusted R. Squared, which is encouraging. We now consider some other models as well**
 
 
 
@@ -252,11 +274,6 @@ summary(MSRP_mod_both_aic_lin)$r.sq
 ```
 
 
-```{r}
-calc_loocv_rmse = function(model) {
-  sqrt(mean((resid(model) / (1 - hatvalues(model))) ^ 2))
-}
-```
 
 **Creating Linear Model with BIC Step**
 
@@ -277,10 +294,12 @@ msrp_mod_poly_both_bic = step( msrp_mod_start2, direction = "both", k = log(n), 
 
 
 
-
 **Metric Table: **
 
 ```{r}
+
+#this table compares the calc_loocv_rmse, adjusted r squared, and r squared
+
 to_insert_1 = c("msrp_mod_additive", calc_loocv_rmse(msrp_mod_additive), 
                 summary(msrp_mod_additive)$adj.r.sq, summary(msrp_mod_additive)$r.sq)
 
@@ -301,6 +320,8 @@ colnames(dataframe) = c("Model Name","calc_loocv_rmse","Adj. R-Sq.", "R-Sq.")
 datatable(dataframe)
 
 ```
+
+**Listing the composition of all the models**
 
 ```{r}
 msrp_mod_additive$call
@@ -331,17 +352,16 @@ msrp_mod_poly_both_bic$call
 
 
 
+##Assumptions
 
 
-
-
-**Assumptions**
+**Creating a few functions to evaluate the model assumptions: **
 
 
 ```{r}
-plot_func = function(model, pointcol = "blue",linecol = "green") {
+plot_func = function(model, pointcol = "slateblue3",linecol = "limegreen") {
   plot(fitted(model), resid(model), col = pointcol, pch = 20, xlab = "Fitted", ylab = "Residuals")
-  abline(h = 0, col = linecol, lwd = 2)
+  abline(h = 0, col = linecol, lwd = 4)
 
 }
 ```
@@ -356,14 +376,14 @@ assumption_tester = function(model) {
   #normality test
   print("Shapiro test:")
   print(shapiro.test(resid(model)[0:5000]))
-  hist(model$resid)
+  hist(model$resid, col = "skyblue3")
   
 
   #multicollinearity
   vif_vals = vif(model)
   print("Max VIF Value:")
-  print(max(vif_vals))
-  print(vif_vals[vif_vals > 10])
+  #print(max(vif_vals))
+  print(vif_vals[vif_vals > 5])
   
   #Constant Variance
   plot_func(model)
@@ -380,157 +400,173 @@ assumption_tester = function(model) {
 ```
 
 
-
 ```{r}
-#assumption_tester(msrp_mod)
+assumption_tester(MSRP_mod_both_aic_poly)
 ```
 
-
-**Here, we can see that the VIF values for Engine.Cylinders and highway.MPG are fairly high if we go with a threshold of 10. There does appear to be some multicollinearity **
-
-**The Shapiro-Wilk test and the qq plot also indicate non-normality**
+**The Shapiro-Wilk test and the qq plot indicate non-normality of errors**
 
 **The constant variance assumption (based on the fitted vs residuals graph and the BP-test) also does appear to be violated **
 
-
-
-## Managing Assumption Violations
-
-### Multicollinearity
-
-**We can look into removing the Engine.Cylinders variable and seeing how this impacts the model**
+**We can see that the VIF values for quite a few of the predictors are fairly high if we go with a threshold of 5. There does appear to be high multicollinearity **
 
 ```{r}
-msrp_mod_no_cyl = lm(MSRP ~. - Popularity - Engine.Cylinders, data_train)
-vif(msrp_mod_no_cyl)[vif(msrp_mod_no_cyl) > 10]
+pairs(data_train, col = "dodgerblue")
 ```
 
 
-**We can further considering removing highway.MPG , since this issue is probably being caused by the highway.MPG and city.mpg being closely related**
 
 ```{r}
-msrp_mod_no_cyl_highmpg = lm(MSRP ~. - Popularity - Engine.Cylinders - highway.MPG, data_train)
-vif(msrp_mod_no_cyl_highmpg)[vif(msrp_mod_no_cyl_highmpg) > 5]
-
+#Renaming the model for convenience:
+chosen_model = MSRP_mod_both_aic_poly
 ```
 
 
-**Now, we can see that none of the VIFs are more than 5, which is well below the threshold.**
+
+## Improving the Model
 
 
-```{r}
-assumption_tester(msrp_mod_no_cyl_highmpg)
-```
-**We see that we have given up on some prediction accuracy in order to satisfy the model assumption**
-
-
-## Influential Points:
+### Influential Values
 
 We can consider removing influential points from our model
 
 ```{r}
-msrp_mod_no_cyl_highmpg_cd = cooks.distance(msrp_mod_no_cyl_highmpg)
-msrp_mod_influential_fix = lm(MSRP ~. - Popularity - Engine.Cylinders - highway.MPG, data = data_train, 
-                              subset = msrp_mod_no_cyl_highmpg_cd <= 4/length(msrp_mod_no_cyl_highmpg_cd))
+cd_chosen_mod = cooks.distance(chosen_model)
+length(cd_chosen_mod[cd_chosen_mod > 4 / length(cd_chosen_mod) ])
 
-assumption_tester(msrp_mod_influential_fix)
+cox_sub = cd_chosen_mod <= 4/length(cd_chosen_mod)
 ```
 
-**This has marginally helped our value of adjusted R-squared, which is once more encouraging**
+**Of the 4556 points in our chosen model, 254 appear to be influential. We can consider removing these from our model**
 
 
-**In order to work towards the normality assumption and the multicollinearity, we will need to consider transformations on our predictors and our response variables**
-
-
-## Transformations
-
-**Since our response variable (MSRP) is strictly positive, we can consider Box-Cox transformations**
-```{r}
-boxcox(msrp_mod_influential_fix, plotit = TRUE, lambda = seq(0.1, 0.3, by = 0.1))
-```
+**We reload the model, with the influential points removed: **
 
 
 ```{r}
-msrp_mod_cox = lm((((MSRP ^ 0.2) - 1) / 0.2) ~ .  - Popularity - Engine.Cylinders - highway.MPG, data = data_train, 
-                              subset = msrp_mod_no_cyl_highmpg_cd <= 4/length(msrp_mod_no_cyl_highmpg_cd))
+chosen_model_uninf = lm(formula = MSRP ~ Make + Engine.Fuel.Type + Engine.HP + Engine.Cylinders + 
+    Transmission.Type + Driven_Wheels + Number.of.Doors + Vehicle.Size + 
+    highway.MPG + ReleasedYearsAgo + I(Engine.HP^2) + I(ReleasedYearsAgo^2) + 
+    I(city.mpg^2) + I(highway.MPG^2), data = data_train, subset = cox_sub)
 
-msrp_mod_log = lm(log(MSRP) ~ .  - Popularity - Engine.Cylinders - highway.MPG, data = data_train, 
-                              subset = msrp_mod_no_cyl_highmpg_cd <= 4/length(msrp_mod_no_cyl_highmpg_cd))
-
+summary(chosen_model_uninf)$adj.r.sq
 ```
+
+**We can see that this removal of influential points has increased the adjusted R-squared from 0.84 to 0.88, which is expected and encouraging.**
+
+
+
+### Satisfying Assumptions
+
+
+#### Normality Assumption
+
+
+**We can consider the Box-Cox Transformation method since our response variable (MSRP) is strictly positive**
+
+```{r}
+boxcox(chosen_model_uninf, plotit = TRUE, lambda = seq(0.3, 0.5, by = 0.1))
+```
+
+
+**From this, we see that λ = 0.25 is extremely close to the maximum and within the confidence interval.**
+
+
+**We can now fit a model with the transformation of λ = 0.25 applied to the response variable: **
 
 
 ```{r}
-assumption_tester(msrp_mod_log)
+
+
+chosen_model_trans1 = lm(formula = (((MSRP ^ 0.37) - 1) / 0.37)  ~ Make + Engine.Fuel.Type + Engine.HP + Engine.Cylinders + 
+    Transmission.Type + Driven_Wheels + Number.of.Doors + Vehicle.Size + 
+    highway.MPG + ReleasedYearsAgo + I(Engine.HP^2) + I(ReleasedYearsAgo^2) + 
+    I(city.mpg^2) + I(highway.MPG^2), data = data_train, subset = cox_sub)
+
+assumption_tester(chosen_model_trans1)
+
 
 ```
 
-
+**Since our λ is somewhat close to 0, we  also consider a log transformation on the dependant variable:**
 
 ```{r}
-assumption_tester(msrp_mod_cox)
-```
 
+chosen_model_trans2 = lm(formula = log(MSRP) ~ Make + Engine.Fuel.Type + Engine.HP + Engine.Cylinders + 
+    Transmission.Type + Driven_Wheels + Number.of.Doors + Vehicle.Size + 
+    highway.MPG + ReleasedYearsAgo + I(Engine.HP^2) + I(ReleasedYearsAgo^2) + 
+    I(city.mpg^2) + I(highway.MPG^2), data = data_train, subset = cox_sub)
 
-
-**Trying Polynomial Model with AIC choice**
-```{r}
-MSRP_big_mod = lm(
-  MSRP ~ . + I(Engine.HP ^ 2) + I(ReleasedYearsAgo ^ 2) + I(city.mpg ^ 2) + I(highway.MPG ^ 2)  + I(Popularity ^ 2), 
-  data = data_train)
-
-MSRP_mod_back_aic = step(MSRP_big_mod, direction = "backward", trace = 0)
-
-summary(MSRP_mod_back_aic)
+assumption_tester(chosen_model_trans2)
 
 ```
 
+**Using the log transformation, we have satisfied the assumption of normality of errors.**
+
+**We can see that we have improved the p-value of the Shapiro-Wilk normality test from less than < 2.2e-16 to a value of roughly 0.2. This means we fail to reject the null hypothesis, which is what we want. This is a substantial improvement. **
+
+**Additionally, the histogram of the residuals and the Q-Q Plot are much better than before, both indicating that we have moved towards meeting the normality assumption.**
 
 
-
+### Collinearity
 
 ```{r}
-#assumption_tester(MSRP_big_mod)
+summary(chosen_model_trans2)
 ```
 
 
-```{r}
-#alias(MSRP_mod_back_aic)
-#assumption_tester(MSRP_mod_back_aic)
-```
-
-
-
-**Making model improvements**
-
-```{r}
-car_removed_predictors = lm(log(MSRP) ~ Make + Engine.Fuel.Type + log(Engine.HP) +  Transmission.Type + 
-    Driven_Wheels + Number.of.Doors + 
-    I(ReleasedYearsAgo^2) + I(city.mpg^2) + 
-    I(highway.MPG^2) , data = data_train)
-```
-
-```{r}
-assumption_tester(car_removed_predictors)
-```
-
-```{r}
-alias(car_removed_predictors)
-#summary(car_removed_predictors)
-```
-
-
-
+**As we saw from the VIF results, there are a few predictors which show sighns of multicollinearity. We can start by removing the predictor Engine.Cylinders, since all the dummy variables associated to it have high VIFs and their p-values are also high from the summary.**
 
 
 
 ```{r}
-#plot( MSRP~Engine.HP, data = car_data_factored, scientific = FALSE)
+chosen_model_drop1 = lm(formula = log(MSRP) ~ Make + Engine.Fuel.Type + Engine.HP + 
+    Transmission.Type + Driven_Wheels  + 
+    Vehicle.Size + highway.MPG + ReleasedYearsAgo + I(Engine.HP^2) + 
+    I(ReleasedYearsAgo^2) + I(city.mpg^2) + I(highway.MPG^2), 
+    data = data_train, subset = cox_sub)
 
-#hist( car_data_factored$MSRP, scientific = FALSE)
 
+vif(chosen_model_drop1)[vif(chosen_model_drop1) > 5]
+summary(chosen_model_drop1)
 ```
 
 
 
-**This model does not **
+```{r}
+assumption_tester(chosen_model_drop1)
+```
+
+## Testing 
+
+
+**Retrieving the predictions made by our model on the test data**
+```{r}
+test_predictions_log = predict(chosen_model_drop1, newdata = data_test, type = "resp")
+
+test_predictions = exp(test_predictions_log)
+
+```
+
+
+**Plotting the test-results:**
+
+```{r}
+
+
+data = data.frame(
+  x= test_predictions,
+  y= data_test$MSRP
+)
+
+
+plot(data$x, data$y,
+     pch=1, 
+     cex=1, 
+     col="paleturquoise3",
+     xlab="Predicted Value of MSRP", ylab="Actual Value of MSRP",
+     main="Predicted vs Actual MSRP"
+     )
+```
+
+
